Basic page layout using CSS Grid and prevent overflow

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -28,6 +28,7 @@ img {
 
 figure {
 	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
+	width: auto !important;
 }
 
 @import "tables";
