--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -23,11 +23,13 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
+	white-space: pre-wrap;
 }
 
 code, kbd, tt, var {
 	font-family: $font__code;
 	@include font-size(0.9375);
+	white-space: pre-wrap;
 }
 
 abbr, acronym {
